add new transitions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BaseActivity" />
-
+        <activity android:name=".RoomActivity" />
+        <activity android:name=".LightActivity"></activity>
     </application>
 
 </manifest>
