--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
+    useLibrary 'org.apache.http.legacy'
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.example.jack.hal"
@@ -21,6 +22,7 @@ android {
             debuggable true
         }
     }
+
 }
 
 dependencies {
@@ -32,4 +34,6 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:support-v4:25.1.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.volley:volley:1.0.0'
+
 }
