--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,4 +19,7 @@
         <activity android:name=".LightActivity"></activity>
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
 </manifest>
