add customized class for room loading

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,4 +22,6 @@
         <activity android:name=".BaseActivity"></activity>
     </application>
 
+    <service android:name=".UpdateService" />
+
 </manifest>
