--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     compile ('io.socket:socket.io-client:0.8.3') {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
+
     }
+    compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
+
 
 }
