--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,9 +20,12 @@
         </activity>
         <activity android:name=".RoomActivity" />
         <activity android:name=".LightActivity" />
-        <activity android:name=".BaseActivity"></activity>
-    </application>
+        <activity android:name=".BaseActivity" />
 
-    <service android:name=".UpdateService" />
+        <service
+            android:name=".services.SocketService"
+            android:enabled="true"
+            android:exported="true"></service>
+    </application>
 
 </manifest>
