--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -25,7 +24,12 @@
         <service
             android:name=".services.SocketService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <activity
+            android:name=".pattern.PatternListActivity"
+            android:label="@string/title_activity_pattern_list"
+            android:theme="@style/MyMaterialTheme"></activity>
     </application>
 
 </manifest>
